oxiplate-derive/tests/broken/if/if-let-single-without-expression.stderr
error: Expected `=`
 --> tests/broken/if/if-let-single-without-expression.rs:8:21
  |
8 | {%- if let Value(a) -%}
  |                     ^^^
